# DMARCer

./: .env  .gitignore  Cargo.toml  Dockerfile.worker  README.md
.github/workflows/: ci.yml
src/: config.rs  error.rs  file_handlers.rs  geo.rs  lib.rs  main.rs  models.rs  tests.rs  webhook.rs  worker.rs  xml_parser.rs  zip_handler.rs
tests/: security.rs
