[package]
name = "dmarcer"
version = "1.1.0"
edition = "2021"
authors = ["Maciej Szymczak"]
description = "Professional DMARC report analyzer in Rust"

[dependencies]
# Command-line parsing
clap = { version = "4.5", features = ["derive"] }
# Terminal coloring
colored = "3.0.0"
# Logging
env_logger = "0.11"
log = "0.4"
# Error handling
anyhow = "1.0"
thiserror = "2.0.11"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
prettytable-rs = "0.10"
# Archive processing (ZIP/GZIP)
zip = "2.2.2"
quick-xml = "0.37.2"
# HTTP client
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
tokio = { version = "1.35", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"
ipgeolocate = "0.3"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = "0.3"
rayon = "1.7"

[dev-dependencies]
tempfile = "3.8"
wiremock = "0.6.2"
dmarcer = { path = "." }
